# SkeletonCpp

./: CMakeLists.txt  README.md  createProject.sh
cmake/GitVersion/: CMakeLists.txt
docs/: CMakeLists.txt  Doxyfile.in
include/REPLACEME_PROJECT_NAMESPACE/: SomeClass.h  version.h
include/REPLACEME_PROJECT_NAMESPACE/detail/: TLSHandler.h
src/: SomeClass.cpp  TLSHandler.cpp  main.cpp  version.cpp.in
tests/: CMakeLists.txt
tests/include/REPLACEME_PROJECT_TESTS_NAMESPACE/: testinputs.h
tests/src/: main.cpp  test_SomeClass.cpp  test_TLSHandler.cpp  test_version.cpp  testinputs.cpp.in
